--- a/saitae-web/src/main/webapp/pages/tipopp.xhtml
+++ b/saitae-web/src/main/webapp/pages/tipopp.xhtml
@@ -10,7 +10,7 @@
         <title>Administración de Tipos</title>
         <h:outputStylesheet library="css" name="tpp.css"/>
     </h:head>
-    <body>
+    <h:body>
 
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
 
@@ -187,6 +187,6 @@
             </ui:define>
         </ui:composition>
 
-    </body>
+    </h:body>
 </html>
 
