--- a/saitae-web/src/main/webapp/pages/lictp.xhtml
+++ b/saitae-web/src/main/webapp/pages/lictp.xhtml
@@ -15,8 +15,7 @@
                     <p:tabView id="tw" orientation="left" dynamic="true" style="height: 100%; width: 90%;">
                         <p:tab title="Tipo Permisos">
                             <p:dataTable id="tp1" widgetVar="tipos" var="tp" value="#{tipoController.all}" 
-                                         editable="true" styleClass="tabla" rows="8" paginator="true"
-                                         emptyMessage="Sin registros aún.">
+                                         editable="true" styleClass="tabla" emptyMessage="Sin registros aún.">
                                 <f:facet name="header">
                                     Administración de los tipos de permisos
                                 </f:facet>
