--- a/saitae-web/src/main/webapp/pages/agregacion.xhtml
+++ b/saitae-web/src/main/webapp/pages/agregacion.xhtml
@@ -46,7 +46,8 @@
                                            dui="#{maestroController.dui}" municipio="#{maestroController.municipio}" 
                                            municipioLista="#{maestroController.municipiosLista}" 
                                            persona="#{maestroController.maestro.persona}"
-                                           listenerA="#{maestroController.setChange()}"/>
+                                           listenerA="#{maestroController.setChange()}"
+                                           t="4"/>
                             </p:panel>
                         </p:tab>
                         <p:tab id="address" title="Contacto">
