--- a/saitae-web/src/main/webapp/pages/agAdm.xhtml
+++ b/saitae-web/src/main/webapp/pages/agAdm.xhtml
@@ -18,7 +18,8 @@
                                    dui="#{administradorController.dui}" municipio="#{administradorController.muni}" 
                                    municipioLista="#{administradorController.municipioList}"
                                    listenerA="#{administradorController.onItemSelect2(event)}" 
-                                   persona="#{administradorController.adm}"/>
+                                   persona="#{administradorController.adm}"
+                                   t="100"/>
                     </p:panel>
                 </p:tab>
                 <p:tab title="Contacto">
@@ -30,7 +31,8 @@
                     <p:panel header="Selección del Area Designada a Administrar">
                         <h:panelGrid columns="3">
                             <p:outputLabel for="tipo" value="Seleccione el tipo de administrador que desea agregar"/>
-                            <p:selectOneMenu id="tipo" value="#{administradorController.adm.tipoPersona.idtipoPersona}" required="true" 
+                            <p:selectOneMenu id="tipo" value="#{administradorController.adm.tipoPersona.idtipoPersona}" 
+                                             required="true" 
                                              title="Ingrese el número de documento de identificación de la persona.">
                                 <f:selectItem itemLabel="Seleccione" itemValue=""/>
                                 <f:selectItems value="#{administradorController.tipos}" var="t"
