--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -40,9 +40,8 @@
                 <p:commandButton actionListener="#{loginController.login()}" value="Ingresar"/>
                 <p:column/>
                 <f:facet name="footer">
-                    <h:link value="Nuevo ingreso" outcome="pages/nuevoalumno.intex"/>
+                    <h:link value="Nuevo ingreso" outcome="pages/nuevoIngreso.intex"/>
                 </f:facet>
-
                 <p:focus context="panel"/>
             </h:panelGrid>
         </h:form>
